Instalando, seteando el ServiceWorker y Manifest para crear la PWA

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,14 +23,14 @@ const { title } = Astro.props;
 		<meta name="apple-mobile-web-app-title" content="Ale Schwartz Portfolio" />
 		<meta name="apple-mobile-web-app-capable" content="no" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<link rel="shortcut icon" href="icons/favicon.ico">
-		<link rel="apple-touch-icon" href="icons/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="192x192" href="icons/android-chrome-192x192.png">
-		<link rel="icon" type="image/png" sizes="512x512" href="icons/android-chrome-512x512.png">
+		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="apple-touch-icon" href="apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
+		<link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
 
-		<script is:inline src="/registerSW.js"></script>
+		<!-- <script is:inline src="/registerSW.js"></script> -->
 		<link rel="manifest" href="/manifest.webmanifest" />
 
 		<title>{title}</title>
