--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="generator" content={Astro.generator} />
 
         <!--   PWA, Manifest, Icons   -->
@@ -29,8 +29,6 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 		<link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png">
-
-		<!-- <script is:inline src="/registerSW.js"></script> -->
 		<link rel="manifest" href="/manifest.webmanifest" />
 
 		<title>{title}</title>
