Cambiando el blog y detalles

--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -10,12 +10,13 @@
 
 <style>
     .Cards {
+        padding: 0.5rem;
         overflow: hidden;
         box-sizing: border-box;
     }
     .Cards__container {
         padding-top: 3rem;
-        padding-bottom: 3rem;
+        padding-bottom: 6rem;
         margin: auto;
         width: 100%;
         max-width: 1024px;
@@ -24,6 +25,6 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: space-between;
     }
 </style>
