--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -19,7 +19,7 @@ import WaveHeader from '../components/icons/WaveHeader.astro';
 			<span class="Blog__year--span">2023</span>
 		</div>
 		<div class="Blog__post--list" >
-			<a class="Blog__post" href="/blog/distrib-carpetas-react" >
+			<a class="Blog__post" href="/docs/distrib-carpetas-react" >
 				<p>3 AGO</p>
 				<p>
 					<strong>📚 Distribución de carpetas en proyecto de React: <br />¿Cómo ordenarlas?.</strong>
@@ -30,13 +30,13 @@ import WaveHeader from '../components/icons/WaveHeader.astro';
 			<span class="Blog__year--span">2021</span>
 		</div>
 		<div class="Blog__post--list" >
-			<a class="Blog__post" href="/blog/config-oh-my-posh" >
+			<a class="Blog__post" href="/docs/config-oh-my-posh" >
 				<p>21 JUN</p>
 				<p>
 					<strong>▶️ Configurando mi terminal: <br />¿Cómo personalizar WSL en la terminal de Windows con Oh-My-Post?.</strong>
 				</p>
 			</a>
-			<a class="Blog__post" href="/blog/markdown-con-react" >
+			<a class="Blog__post" href="/docs/markdown-con-react" >
 				<p>19 JUN</p>
 				<p>
 					<strong>🚀 Mi primer post: <br />¿Como utilizar texto en formato markdown dentro de un componente en react?</strong>
