--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@ import SvgBars from "./icons/SvgBars.astro"
     const bars = document.getElementById("bars");
     if (bars) {
         bars.addEventListener("click", () => {
-            menu.classList.toggle('active');
+            menu?.classList.toggle('active');
         });
     }
 </script>
@@ -42,6 +42,10 @@ import SvgBars from "./icons/SvgBars.astro"
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 50;
+        position: sticky;
+        top: 0;
+        border-bottom: 2px solid rgba(224, 224, 224, 0.9);
     }
     .navbar__logo--link {
         text-decoration: none;
@@ -100,7 +104,7 @@ import SvgBars from "./icons/SvgBars.astro"
             left: -100%;
             opacity: 1;
             transition: all 0.5s ease;
-            justify-content: start;
+            justify-content: flex-start;
         }
         .nav__menu.active {
             margin: 0%;
