--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -28,11 +28,13 @@ import WaveHeader from '../components/icons/WaveHeader.astro';
 <style>
 	.home__h2 {
 		width: 100%;
-		padding-bottom: 24px;
+		padding-top: 60px;
+		margin: auto;
 		text-align: center;
 		font-family: var(--font-text);
 		font-size: 28px;
-		font-weight: 600;
+		font-weight: 700;
+		background-color: var(--color-secondary);
 		color: var(--color-third);
 	}
 </style>
