--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,9 @@
 
 <footer class="footer">
     <p class="footer__text">
-        Diseñado con ❤️ por: <br />  <br />
+        Diseñado con ❤️ por: <br /> 
         <strong>Alejandro Matías Schwartz</strong> <br />
-        <small>Ciudad de Posadas, Misiones, Argentina</small>  <br />
+        <small>Ciudad de Posadas, Misiones, Argentina</small>
     </p>
 </footer>
 
@@ -14,7 +14,7 @@
     .footer {
         /* border: 2px solid white; */
         box-sizing: border-box;
-        height: 140px;
+        height: 160px;
         margin: none;
         padding: none;
         background: #212429;
@@ -29,8 +29,7 @@
         font-family: var(--font-text);
         font-size: 18px;
         font-weight: 500;
-        text-align: center;
-        
+        text-align: center;        
     }
     .footer__text > strong {
         font-family: var(--font-title);
