--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
 import SvgBars from "./icons/SvgBars.astro"
+import SvgXmark from "./icons/SvgXmark.astro";
 ---
 
 <nav class="navbarItems" >
@@ -128,7 +129,8 @@ import SvgBars from "./icons/SvgBars.astro"
         }
         .navbar__logo {
             font-size: 19px;
-            margin: 12px;
+            margin-left: 12px;
+            margin-top: 6px;
             position: absolute;
             top: 0;
             left: 0;
