--- a/src/components/SocialMedia.astro
+++ b/src/components/SocialMedia.astro
@@ -53,6 +53,9 @@ import SvgTwitter from "./icons/SvgTwitter.astro";
         font-weight: 600;
     }
     .SocialMedia__container {
+        /* height: 60px;
+        width: 60px; */
+
         padding: 60px 0px;
         display: grid;
         grid-template-columns: 160px 160px;
@@ -60,12 +63,14 @@ import SvgTwitter from "./icons/SvgTwitter.astro";
         justify-content: space-around;
     }
     .SocialMedia__icon {
-        width: 48px;
-        height: 48px;
+
+
+        width: 84px;
+        height: 84px;
         margin: auto;
         padding: 20px;
         border-radius: 20px;
-        background: var(--color-secondary);
+        background: #e0e0e0;
         box-shadow: 20px 20px 60px #bebebe,
                     -20px -20px 60px #ffffff;
     }
