--- a/src/components/CardBlog.astro
+++ b/src/components/CardBlog.astro
@@ -20,7 +20,7 @@
 
 <style>
     .CardBlog__container {
-        max-width: 680px;
+        max-width: 720px;
         margin: auto;
         padding: 120px 0;
     }
@@ -43,6 +43,9 @@
         overflow: hidden;
         box-sizing: border-box;
     }
+    .CardBlog__item > p {
+        margin: 1rem;
+    }
     .CardBlog__link {
         height: 24px;
         width: 140px;
@@ -58,7 +61,10 @@
         margin-top: 2rem;
     }
     .CardBlog__link > p {
-        margin: 0%;
+        margin: 0;
+        padding: 0.5rem 1rem;
         text-align: center;
+        border: 2px solid #313434;
+        border-radius: 0.5rem;
     }
 </style>
