--- a/src/layouts/Docs.astro
+++ b/src/layouts/Docs.astro
@@ -30,10 +30,7 @@ const {
   <main class="grid grid-cols-12 min-h-screen">
 
     <div class="col-span-12 md:col-start-3 md:col-span-7 dark:bg-zinc-800">
-      <article class="px-8 pb-16 prose max-w-none md:prose-md">
-        <button id="open" class="mt-4 md:hidden bg-zinc-100 dark:bg-zinc-900 border-2 dark:border-zinc-700 w-10 h-10 pl-0.5 rounded-lg" aria-label="Navigate docs">
-          <Icon name="mdi:menu" class="w-8 h-8 text-zinc-500 dark:text-white" />
-        </button>
+      <article class="px-2 md:px8 pb-16 prose max-w-none md:prose-md">
         <h1 class="my-8">{title}</h1>
         <slot/>
       </article>
